2011-09-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_reporting_global_tab.php
	include/help/es/help_reporting_global_tab.php: Modified help file.
	
	* godmode/reporting/reporting_builder.item_editor.php: Added contextual 
	helps.

2011-09-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_network_map_enterprise.php
	include/help/es/help_network_map_enterprise.php: Added new help files.
	
	* extensions/insert_data.php
	extensions/extension_uploader.php
	godmode/reporting/reporting_builder.item_editor.php: Added contextual 
	helps.

2011-09-19  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_gis_tab.php,
	include/help/ja/help_graph_builder.php,
	include/help/ja/help_graph_editor.php,
	include/help/ja/help_graph_view.php,
	include/help/ja/help_inventory_tab.php,
	include/help/ja/help_local_component.php,
	include/help/ja/help_module_linking.php,
	include/help/ja/help_policy_agent.php,
	include/help/ja/help_policy_queue.php,
	include/help/ja/help_profile.php,
	include/help/ja/help_reporting_global_tab.php,
	include/help/ja/help_reporting_item_editor_tab.php,
	include/help/ja/help_reporting_list_items_tab.php,
	include/help/ja/help_reporting_preview_tab.php,
	include/help/ja/help_reporting_wizard_sla_tab.php,
	include/help/ja/help_reporting_wizard_tab.php: Added new help files.

2011-09-17  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert_action.php,
	include/help/ja/help_alert_command.php,
	include/help/ja/help_alert_compound.php,
	include/help/ja/help_alert_template.php,
	include/help/ja/help_collection_tab.php,
	include/help/ja/help_collections.php,
	include/help/ja/help_component_groups.php,
	include/help/ja/help_event_alert.php,
	include/help/ja/help_export_server.php,
	include/help/ja/help_external_alert.php: Added new help files.

2011-09-16 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: added the "getgroups" call.
