@@ -1,3 +1,8 @@
+2011-09-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/messages/message.php: Fixed several mistakes on this 
+	view.
+
 2011-09-19 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* include/help/en/help_reporting_global_tab.php
